# scientific-paper-scout

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scout/: app.py  main.py  model.py  pyproject.toml  scraper.py  summariser.py  test_client.py
scout-ui/: package-lock.json  package.json
scout-ui/src/: App.tsx  index.css
scout-ui/src/components/: PaperScout.tsx
scout/mcp_servers/: scout_server.py
