[project]
name = "kairos"
version = "0.1.0"
description = "Scientific-Paper Scout"
authors = [
    {name = "Sachin-2007",email = "sachinsundar2007@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mcp (>=1.9.2,<2.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-mcp-adapters (>=0.1.4,<0.2.0)",
    "langchain-litellm (>=0.2.1,<0.3.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-core (>=0.3.63,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "aiohttp (>=3.12.9,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
